# pgmt

./: .env  .gitignore  Cargo.toml  FLYWAY.md  LICENSE  Makefile  README.md  TODO.md
cli/: Cargo.toml
cli/src/: lib.rs  placeholders.rs
core/: Cargo.toml
core/src/: dao.rs  error.rs  lib.rs  template.rs  tests_helper.rs
core/tests/: migrations_tests.rs  test_helper_test.rs
core/tests/migrations/: U1.0.0__Drop_table_1_name.sql  U1.0.1__Drop_table_2_name.sql  V1.0.0__Create_table_1_name.sql  V1.0.1__Add_table_2_name.sql
dev-tools/pg/: Makefile  pnpm-lock.yaml
macros/: Cargo.toml  Makefile
macros/src/: lib.rs  test_me.rs
macros/src/macros/: test.rs
src/: lib.rs  main.rs
tests/: cli_test.rs  test_macro.rs  test_test_function.rs
