[workspace]
members = [".", "core", "macros", "cli"]

[workspace.dependencies]
clap = { version = "4.4.11", features = ["cargo", "derive"] }
tokio = { version = "1.29.1", features = ["full"] }
assert_cmd = "2.0.17"
pretty_assertions = "1.4.0"
chrono = { version = "0.4.41", features = ["serde"] }
crc32fast = "1.4.2"
deadpool-postgres = "0.14"
derive_more = { version = "1.0.0", features = ["from", "display"] }
dotenvy = "0.15.7"
postgres-types = { version = "0.2.9", features = [
  "derive",
  "with-uuid-1",
  "with-uuid-0_8",
  "with-chrono-0_4",
  "with-serde_json-1",
] }
rand = { version = "0.9", features = ["small_rng"] }
regex = "1.11.1"
semver = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
url = "2.5.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
pgmt = { path = "." }
pgmt_cli = { path = "cli" }
pgmt_core = { path = "core" }
pgmt_macros = { path = "macros" }
indoc = "2.0.3"
tokio-postgres = { version = "0.7" }

[package]
name = "pgmt"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
pgmt_cli = { workspace = true }
pgmt_core = { workspace = true }
pgmt_macros = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true }
tokio-postgres = { workspace = true }
