[package]
name = "pgmt_core"
version = "0.0.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
crc32fast = { workspace = true }
deadpool-postgres = { workspace = true }
derive_more = { workspace = true }
dotenvy = { workspace = true }
postgres-types = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
semver = "1.0.26"
serde = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
